--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "doc-appointment-system",
+  "name": "AppointCare",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "react-scripts start",
+    "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix ./client",
     "dev": "concurrently \"npm start\" \"npm run client\""
